Typing Arena 게임을 JavaFX로 리팩터링; README 및 JSON 단어 목록 업데이트
- 메인 애플리케이션을 Swing에서 JavaFX로 전환하여 UI 성능과 현대적인 룩 향상
- 새로운 프로젝트 구조와 사용 방법을 반영하도록 README 파일 업데이트
- 단어 목록 형식을 텍스트에서 JSON으로 변경하여 관리 및 확장성 개선
- 게임 로직을 새로운 JSON 포맷에서 단어를 로드하도록 개선
- 사용자 경험 향상을 위해 UI 컴포넌트와 레이아웃 개선
- 참고용 샘플 단어 JSON 파일 추가